# sdf-lab

./: .gitignore  Dockerfile  Makefile  README.md  SDF_Colab.ipynb  docker-compose.yml  pyproject.toml  server.py
sdf/curate/: mixture.py
sdf/dedupe/: exact.py  minhash.py  semantic.py
sdf/eval/: report.py
sdf/filter/: format.py  pii.py  safety.py  schema.py
sdf/generate/: code_math.py  templates.py  tools.py
sdf/score/: calibrate.py  judge.py  verifiers.py
sdf/tools/: dpo_builder.py  mix_preview.py  stats.py
sdf/train/: sft_trainer.py
tests/: test_dpo_builder.py  test_pipeline.py  test_semantic_dedupe.py  test_tool_schema.py  testdata.sft.jsonl
