[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdf-lab"
version = "0.1.0"
description = "Synthetic Data Factory (SDF): generate -> filter -> dedupe -> score -> curate instruction data"
readme = "README.md"
authors = [{ name = "The Institute" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.22",
  "transformers>=4.40",
  "torch>=2.1",
  "peft>=0.11",
  "pydantic>=2.5",
  "requests>=2.31",
  "numpy>=1.24",
  "jsonschema>=4.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "black>=24.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sdf*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
